# Tetris

./: .gitignore  CMakeLists.txt  run.bat  runTests.bat
docs/: README.md
src/: CMakeLists.txt  main.cpp
src/components/: Coordinate.h  Line.h  current_figure.h  current_points_amount.h  occupied_space.h
src/components/sub_components/: block.h  coord.h  form.h
src/utils/: math_utils.h
test/: CMakeLists.txt  tests.cpp
